[tool.poetry]
name = "apollo11log"
version = "0.1.0"
description = ""
authors = ["xss <michaela@michaela.lgbt>"]
readme = "README.md"
repository = "https://github.com/xssfox/apollo11log"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
apollo11log = 'apollo11log:__main__.main'